@@ -1,4 +1,6 @@
 
+160217	Added transparent UDP test case to testsuite.sh.
+
 160128	Contribution from Talik Eichinger: add X-Forwarded-Proto when doing
 	SSL decryption.
 
